# homework-graphs

./: .gitignore  agmprim.cpp  bruitForce.cpp  brutForce.cpp  dijkstra.cpp  dsatur.cpp  file.txt  fordFulkerson.cpp  fordfn.cpp  graph.hpp  graphs.kdev4  igraph.hpp  igraphiter.cpp  igraphloader.cpp  igraphloader.hpp  krustal.cpp  listgraph.cpp  listgraph.hpp  listgraphwrapper.cpp  listgraphwrapper.hpp  main.cpp  matrixgraph.cpp  matrixgraph.hpp  meson.build  noname.gv  noorder.cpp  optimizer.cpp  out.txt  vin.hpp  welshPowell.cpp
.kdev4/: graphs.kdev4
